@@ -1,3 +1,9 @@
+2013-08-21  James Pallister  <james.pallister@embecosm.com>
+
+	* include/mageec-ml.h (add_result): Correct use of mageec_feature,
+	mageec_flag.
+	* ml/ml.c (add_result): Likewise.
+
 2013-08-21  Simon Cook  <simon.cook@embecosm.com>
 
 	* include/elfhash.h: Define hashedelf::ignoredsection.
